--- a/hotelmenu.html
+++ b/hotelmenu.html
@@ -153,7 +153,7 @@
                         <h3>Burger</h3>
                     </div>
                     <div class="box5">
-                        <input type="text" value="100" id="n1">
+                        <input type="text" value="Rs.100" id="n1">
                     </div>
                     <input type="button" value="Add to Cart" class="btn" onclick="add('n1')">
                 </div>
@@ -163,7 +163,7 @@
                         <h3>Frankie</h3>
                     </div>
                     <div class="box5">
-                        <input type="text" value="120" id="n2">
+                        <input type="text" value="Rs.120" id="n2">
                     </div>
                     <input type="button" value="Add to Cart" class="btn" onclick="add('n2')">
                 </div>
@@ -173,7 +173,7 @@
                         <h3>Dosa</h3>
                     </div>
                     <div class="box5">
-                        <input type="text" value="180" id="n3">
+                        <input type="text" value="Rs.180" id="n3">
                     </div>
                     <input type="button" value="Add to Cart" class="btn" onclick="add('n3')">
                 </div>
@@ -183,7 +183,7 @@
                         <h3>Pizza</h3>
                     </div>
                     <div class="box5">
-                        <input type="text" value="210" id="n4">
+                        <input type="text" value="Rs.210" id="n4">
                     </div>
                     <input type="button" value="Add to Cart" class="btn" onclick="add('n4')">
                 </div>
@@ -193,7 +193,7 @@
                         <h3>Manchurian</h3>
                     </div>
                     <div class="box5">
-                        <input type="text" value="160" id="n5">
+                        <input type="text" value="Rs.160" id="n5">
                     </div>
                     <input type="button" value="Add to Cart" class="btn" onclick="add('n5')">
                 </div>
